add javascript squarepusher

--- a/javascript-racer.html
+++ b/javascript-racer.html
@@ -3,54 +3,32 @@
 <head>
   <title>Javascript Racer</title>
   <meta charset="UTF-8">
-
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.css">
   <link rel="stylesheet" type="text/css" href="css/main.css">
+  
 </head>
 
 <body>
 
-<table class="racer_table">
-  <tr id="player1_strip">
-    <td></td>
+<table class="racer_table1">
+  <tr>
     <td class="active"></td>
     <td></td>
     <td></td>
-  </tr>
-  <tr id="player2_strip">
     <td></td>
-    <td></td>
-    <td></td>
+  <tr/>
+</table> 
+
+<table class="racer_table2">
+ <tr>
     <td class="active"></td>
+    <td></td>
+    <td></td>
+    <td></td>
   </tr>
 </table>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+<script src="js/main.js"></script>
 </body>
-
-<script type="text/javascript" src="js/main.js"></script>
 
 </html>
