--- a/javascript-racer.html
+++ b/javascript-racer.html
@@ -22,6 +22,7 @@
     <td></td>
     <td></td>
     <td></td>
+    <td>end</td>
   <tr/>
 </table> 
 
@@ -37,6 +38,7 @@
     <td></td>
     <td></td>
     <td></td>
+    <td>end</td>
   </tr>
 </table>
 
