--- a/javascript-racer.html
+++ b/javascript-racer.html
@@ -9,7 +9,8 @@
 </head>
 
 <body>
-
+<h2>Sushi vs Taco</h2>
+<br>
 <table class="racer_table1">
   <tr>
     <td class="active"></td>
@@ -41,7 +42,8 @@
     <td>end</td>
   </tr>
 </table>
-
+<br>
+<p>Press 'Q' to make sushi move and press 'P' to make taco move. Good luck!</p>
 <script src="js/main.js"></script>
 </body>
 
