--- a/javascript-racer.html
+++ b/javascript-racer.html
@@ -23,7 +23,7 @@
     <td></td>
     <td></td>
     <td></td>
-    <td>end</td>
+    <td id="end"></td>
   <tr/>
 </table> 
 
@@ -39,11 +39,11 @@
     <td></td>
     <td></td>
     <td></td>
-    <td>end</td>
+    <td id="end"></td>
   </tr>
 </table>
 <br>
-<p>Press 'Q' to make sushi move and press 'P' to make taco move. Good luck!</p>
+<p>Press 'Q' to get sushi to the soy sauce and press 'P' to get taco to the hot sauce. Good luck!</p>
 <script src="js/main.js"></script>
 </body>
 
