--- a/javascript-racer.html
+++ b/javascript-racer.html
@@ -43,7 +43,7 @@
   </tr>
 </table>
 <br>
-<p>Press 'Q' to get sushi to the soy sauce and press 'P' to get taco to the hot sauce. Good luck!</p>
+<p>Press 'Q' to get sushi to the soy sauce and press 'P' to get taco to the jalapeños. Good luck!</p>
 <script src="js/main.js"></script>
 </body>
 
