--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
   <link rel="stylesheet" type="text/css" href="css/main.css">
   
 </head>
-
 <body>
 <h2>Sushi vs Taco</h2>
 <br>
+//test//
 <table class="racer_table1">
   <tr>
     <td class="active"></td>
